--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,9 +14,24 @@
   }
 }
 
+@font-face {
+  font-family: 'Bogart';
+  src: url('/fonts/Bogart-Medium-trial.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* @font-face {
+  font-family: 'MiFuente';
+  src: url('/fonts/mi-fuente-bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+} */
+
+
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Bogart, sans-serif;
   scroll-behavior: smooth;
 }
